# passwd_exp

./: ChangeLog  MANIFEST  Makefile.in  README  TODO  configure  configure.in  confvars.map.in  install  install-trans-sh  passwd_exp  passwd_exp-admin.cron  passwd_exp.conf  passwd_exp.conf.in  passwd_exp.cron  passwd_exp.cron.in  passwd_exp.in
doc/: input.struct
doc/man/: passwd_exp.1
mod/: _shell.reader  _termcap.reader  passwd.bsd  passwd.bsd.info  shadow.linux  shadow.linux.info  vmail.pfadmin  vmail.pfadmin.info
